# FlappyBird-AI

./: Build.md  CMakeLists.txt  FlappyBird.cpp  ai.cpp  ai.hpp  bird.cpp  bird.hpp  bird.lzp  game.cpp  game.hpp  neuron.cpp  neuron.hpp  painter  pipe.cpp  pipe.hpp  pipe.lzp
